<resources>
    <string name="app_name">TestApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="btn1">ボタン1</string>
    <string name="btn2">ボタン2</string>
    <string name="btn3">ボタン3</string>
    <string name="btn4">ボタン4</string>
    <string name="btn5">ボタン5</string>
    <string name="btn6">ボタン6</string>
</resources>
